<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>

    <string name="description_post_author_avatar">author avatar post</string>
    <string name="description_post_menu_button">menu_button</string>
    <string name="description_post_share_button">button_share</string>
    <string name="description_post_views_button">button_views</string>
    <string name="description_post_likes_button">button_likes</string>
    <string name="description_play_youtoube_button">button_play_youtoube</string>
    <string name="description_post_save">Save</string>
    <string name="over_a_billion">Over a billion</string>
    <string name="remove">Remove</string>
    <string name="post_text">enter text here</string>
    <string name="description_post_like">post_like_button</string>
    <string name="Edit">Edit</string>
    <string name="EmptyContent">Content cannot be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="message_deleted">Message deleted</string>
    <string name="add_post">Add post</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    />


</resources>